--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@ title: Download
 name: download
 download_selected: selected
 ---
-{% assign version = "1.0.176" %}
+{% assign version = "1.0.184" %}
 <div id="page" class="copy">
   <h1>
     Download
@@ -16,6 +16,8 @@ download_selected: selected
   <div id="changelog">
     <h4>Changelog</h4>
     <dl>
+      <dt>1.0.184</dt>
+      <dd>Add pinch-zoom feature to the zoom interaction.</dd>
       <dt>1.0.176</dt>
       <dd>Add itemChanged event for firing events when objects such as carousels are touched by the user.</dd>
       <dd>Improved calculating coordinates when zooming into elements for smoother interactions.</dd>
