--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -4,7 +4,9 @@ title: Zoom
 attrname: zoom
 widgetname: zoom
 interaction_selected: selected
-description: <p>An interaction that zooms into an image and displays a higher resolution image that can be panned.</p>
+description: |
+    <p>An interaction that zooms into an image and displays a higher resolution image that can be panned.</p>
+    <p>Zoom can be triggered by a tap on a button element, a tap on the image directly (which will focus on the coordinates tapped), or through a pinch gesture.</p>
 basic_tab:
   data-ur-set="zoom": add this attribute to the element that wraps the whole interaction
   data-ur-zoom-component="img": the img element
